--- a/HTML/MAIN.html
+++ b/HTML/MAIN.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="Menu.html">MENU</a></li>
-            <li><a href="Setting.html">ABOUT US</a></li>
+            <li><a href="ABOUT.html">ABOUT GAME</a></li>
         </ul>
     </nav>
 </div>
@@ -24,7 +24,7 @@
     </video>
     <div class="Intrs_flight_game">
     <div class="link_to_game">
-        <a href="play.html">
+        <a href="Menu.html">
         <img src="PICTURE/paper-plane-icon-png.webp" alt = "icon">
         </a>
         <h1>GET READY TO FLIGHT</h1>
