--- a/HTML/Menu.html
+++ b/HTML/Menu.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="MAIN.html">BACK</a></li>
-            <li><a href="Setting.html">ABOUT US</a></li>
+            <li><a href="ABOUT.html">ABOUT GAME</a></li>
         </ul>
     </nav>
 </div>
