Implemented the start of the game

--- a/Website_files/Project/Home page/index.html
+++ b/Website_files/Project/Home page/index.html
@@ -89,7 +89,7 @@
 
         function navigateToPlay() {
             // Redirect to the external HTML file (play.html)
-            window.location.href = '/js/test.html';
+            window.location.href = '../js/test.html';
         }
     </script>
 </body>
